--- a/stylesheets/scss/components/_bottom-sheet.scss
+++ b/stylesheets/scss/components/_bottom-sheet.scss
@@ -5,22 +5,22 @@
  **************************************/
 
 .sc-bottom-sheet {
-	@extend .sc-z16;
 	@include transition($bottom-sheet-small-transition);
-	position: $bottom-sheet-position;
+	@include material-shadow(16);
 	background: $white;
-    z-index: $bottom-sheet-z-index;
 	bottom: 0;
-	left: 0;
-	right: 0;
+    display: none;
+	font-size: $bottom-sheet-font-size;
+	font-weight: $bottom-sheet-font-weight;
 	height: auto;
+	left: 0;
+	margin: 0 auto;
 	overflow: hidden;
 	padding: $bottom-sheet-padding;
-	font-weight: $bottom-sheet-font-weight;
-	font-size: $bottom-sheet-font-size;
-	display: none;
+	position: $bottom-sheet-position;
+	right: 0;
 	width: 100%;
-	margin: 0 auto;
+	z-index: $bottom-sheet-z-index;
 
 	@media #{$medium-only} {
 		@include transition($bottom-sheet-medium-transition);
@@ -34,20 +34,20 @@
 
 	ul {
 		list-style-type: none;
-		padding: 0;
 		margin: 0;
+		padding: 0;
 
 		li {
-			padding: 0;
-			font-weight: $bottom-sheet-font-weight;
 			font-size: $bottom-sheet-font-size;
+			font-weight: $bottom-sheet-font-weight;
+			padding: 0;
 
 			.material-icons {
-				vertical-align: middle;
+				color: $bottom-sheet-icons-color;
+				font-size: $bottom-sheet-icons-size;
 				height: auto;
 				margin-right: $bottom-sheet-icons-margin;
-				font-size: $bottom-sheet-icons-size;
-				color: $bottom-sheet-icons-color;
+				vertical-align: middle;
 			}
 		}
 	}
@@ -58,8 +58,8 @@
 		ul {
 			li {
 				&.sc-header {
-					height: $bottom-sheet-header-height;
 					color: $bottom-sheet-header-font-color;
+					height: $bottom-sheet-header-height;
 				}
 
 				&.sc-divider {
@@ -89,11 +89,11 @@
 						@extend .sc-center;
 
 						.material-icons {
-							vertical-align: middle;
-							height: auto;
 							font-size: $bottom-sheet-grid-icon-size;
-							width: $bottom-sheet-grid-icon-size;
+							height: auto;
 							margin: 0;
+							vertical-align: middle;
+							width: $bottom-sheet-grid-icon-size;
 						}
 					}
 
@@ -111,22 +111,22 @@
 	&-music {
 		//@extend .sc-row;
 		padding: 0;
-		height: remCalc(48px);
+		height: rem-calc(48px);
 		//margin: 0;
 
 		figure {
 			//@extend .sc-col, .sc-xs1, .sc-s2, .sc-m1;
 			padding: 0 !important;
-			margin: remCalc(-4px) 0 0 0;
-			width: remCalc(50px);
-			height: remCalc(50px);
+			margin: rem-calc(-4px) 0 0 0;
+			width: rem-calc(50px);
+			height: rem-calc(50px);
 			float: left;
 			position: fixed;
 		}
 
 		.sc-info {
 			float: left;
-			margin: remCalc(2px) 0 0 remCalc(10px);
+			margin: rem-calc(2px) 0 0 rem-calc(10px);
 			//@extend .sc-col, .sc-xs2, .sc-s4, .sc-m8;
 
 			.sc-band, .sc-track {
@@ -135,7 +135,7 @@
 			}
 
 			.sc-band {
-				font-size: remCalc(20px);
+				font-size: rem-calc(20px);
 			}
 		}
 	} */
