--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -5,9 +5,13 @@
  **************************************/
 
 html, body {
+	background: $background;
 	margin: 0;
 	padding: 0;
-	background: $background;
+}
+
+html {
+	//font-size: #{$font-size}px; // TODO should be turned on but off looks better
 }
 
 label {
@@ -19,6 +23,8 @@ body {
 		word-wrap: break-word;
 	}
 
+	@include scrollbar();
+
 	::selection, ::-moz-selection { background: $select-background; }
 
 	* {
@@ -27,8 +33,8 @@ body {
 
 	a {
 		color: $link-color;
-		text-decoration: none;
 		outline: none;
+		text-decoration: none;
 		@include transition(color 300ms cubic-bezier(0.4, 0.0, 0.2, 1));
 
 		@media #{$medium-up} {
@@ -49,16 +55,16 @@ body {
 	}
 
 	main {
-		position: fixed;
-		padding: remCalc($gutter);
-		right: 0;
 		bottom: 0;
-		top: remCalc(48px);
 		left: 0;
 		overflow: auto;
+		padding: rem-calc($gutter);
+		position: fixed;
+		right: 0;
+		top: rem-calc(48px);
 
 		@media #{$small-up} {
-			top: remCalc(56px);
+			top: rem-calc(56px);
 
 		}
 
@@ -68,7 +74,7 @@ body {
 
 		@media #{$medium-up} {
 			left: $drawer-width;
-			top: remCalc(64px);
+			top: rem-calc(64px);
 		}
 	}
 
@@ -91,9 +97,9 @@ body {
 
 	.sc-divider {
 		// https://material.google.com/components/dividers.html#dividers-types-of-dividers
-		height: remCalc(1px);
-		// Light theme
 		background: rgba($black, .12);
+		// Light theme
+		height: rem-calc(1px);
 		// Black theme
 		// background rgba($white, .12);
 	}
@@ -110,5 +116,26 @@ figure {
 img {
 	height: auto;
 	max-width: 100%;
+	/*
+	@include animation(img-loader $transition-small-duration $element-enter-transition);
+
+	@media #{$medium-only} {
+		@include animation(img-loader $transition-medium-duration $element-enter-transition);
+	}
+
+	@media #{$medium-up} {
+		@include animation(img-loader $transition-large-duration $element-enter-transition);
+	}
+
+	@include keyframes(img-loader) {
+		0% {
+			@include opacity(0);
+			@include filter(saturate(0%));
+		}
+		100% {
+			@include opacity(1);
+			@include filter(saturate(100%));
+		}
+	}*/
 }
 
